--- a/practice.html
+++ b/practice.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <p>【ページのタイトル】</p>
+        <title>【ページのタイトル】</title>
         <meta name="description" content="【ページの説明】">
     </head>
 
@@ -13,21 +13,9 @@
             <h1>僕たちのプロフィール</h1>
             <nav>
                 <ul>
-                    <a href="#tiger">
-                        <li>
-                            ちほうタイガー
-                        </li>
-                    </a>
-                    <a href="#hiyoko">
-                        <li>
-                            ひよこ
-                        </li>
-                    </a>
-                    <a href="#buncho">
-                        <li>
-                            ぶんちょう
-                        </li>
-                    </a>
+                    <li><a href="#tiger">ちほうタイガー</a></li>
+                    <li><a href="#hiyoko">ひよこ</a></li>
+                    <li><a href="#buncho">ぶんちょう</a></li>
                 </ul>
             </nav>
         </header>
@@ -64,12 +52,13 @@
             
             <!-- ぶんちょうここから -->
             <section id="buncho">
-<h2>ぶんちょう</h2>
+                <h2>ぶんちょう</h2>
                 <div>
                     <p>
                         どうも！ぶんちょうだよ～！
-</p>
-                </div></div>
+                    </p>
+                </div>
+            </section>
             <!-- ぶんちょうここまで -->
 
         </main>
