--- a/practice.html
+++ b/practice.html
@@ -40,7 +40,7 @@
             <!-- ちほうタイガーここまで -->
             
             <!-- ひよこここから -->
-            <section id="tiger">
+            <section id="hiyoko">
                 <h2>ひよこ</h2>
                 <div>
                     <p>
