--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <title>【ページのタイトル】</title>
         <!-- 2 -->
         <meta name="description" content="【ページの説明】">
+        <!-- 9 -->
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body class="l-body">
         <header class="l-header">
@@ -16,13 +18,13 @@
             <nav class="c-navigation">
                 <ul class="c-navigation__list">
                     <li class="c-navigation__item">
-                        <a href="#tiger" class="c-link">ちほうタイガー</a>
+                        <a href="#tiger" class="c-link--tiger">ちほうタイガー</a>
                     </li>
                     <li class="c-navigation__item">
-                        <a href="#hiyoko" class="c-link">ひよこ</a>
+                        <a href="#hiyoko" class="c-link--hiyoko">ひよこ</a>
                     </li>
                     <li class="c-navigation__item">
-                        <a href="#buncho" class="c-link">ぶんちょう</a>
+                        <a href="#buncho" class="c-link--buncho">ぶんちょう</a>
                     </li>
                 </ul>
             </nav>
@@ -33,6 +35,36 @@
             
             <section id="tiger" class="c-profile-section">
                 <h2 class="c-heading c-heading__secondary">ちほうタイガー</h2>
+                <!-- コメントは ショートカット ctrl+/ が便利だよ -->
+                <div class="c-profile-description">
+                    <p class="c-text">
+                        現代日本で、ごく普通のブラック企業に勤務していたネコ型亜目ネコ科ロボット<br>
+                        <span class="c-text--red">「ちほうタイガー」</span>は、ある日突然上司によって無能の烙印を押され、<br>
+                        異世界「佐渡島」に追放されてしまった。
+                    </p>
+                    <p class="c-text">
+                        だが実は、<span class="c-text--red">「ちほうタイガー」</span>は魔眼<br>
+                        <span class="c-text--red">「ネクスト・デファクト・スタンダード」</span>機能を有していたのだ！
+                    </p>
+                </div>
+            </section>
+            <section id="hiyoko" class="c-profile-section">
+                <h2 class="c-heading c-heading__secondary">ひよこ</h2>
+                <!-- コメントは ショートカット ctrl+/ が便利だよ -->
+                <div class="c-profile-description">
+                    <p class="c-text">
+                        現代日本で、ごく普通のブラック企業に勤務していたネコ型亜目ネコ科ロボット<br>
+                        <span class="c-text--red">「ちほうタイガー」</span>は、ある日突然上司によって無能の烙印を押され、<br>
+                        異世界「佐渡島」に追放されてしまった。
+                    </p>
+                    <p class="c-text">
+                        だが実は、<span class="c-text--red">「ちほうタイガー」</span>は魔眼<br>
+                        <span class="c-text--red">「ネクスト・デファクト・スタンダード」</span>機能を有していたのだ！
+                    </p>
+                </div>
+            </section>
+            <section id="buncho" class="c-profile-section">
+                <h2 class="c-heading c-heading__secondary">ぶんちょう</h2>
                 <!-- コメントは ショートカット ctrl+/ が便利だよ -->
                 <div class="c-profile-description">
                     <p class="c-text">
